--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,16 @@
 projectVersion=1.0.0.BUILD-SNAPSHOT
+micronautDocsVersion=1.0.13
+micronautBuildVersion=1.0.0
 micronautVersion=1.3.0.BUILD-SNAPSHOT
-micronautDocsVersion=1.0.12
-groovyVersion=2.5.6
-title=Micronaut Cache
-projectDesc=Cache support for Micronaut
+micronautTestVersion=1.1.2
+groovyVersion=2.5.7
+title=Micronaut RateLimiter
+projectDesc=Rate limiting support for Micronaut
 projectUrl=http://micronaut.io
-githubSlug=micronaut-projects/micronaut-cache
+githubSlug=micronaut-projects/micronaut-ratelimiter
 githubBranch=master
 spockVersion=1.2-groovy-2.5
-developers=Alvaro Sanchez-Mariscal
+developers=James Kleeh
 # Needed for documentation generation. Needs to be Grails 3.2.x not 3.3.x
 grailsVersion=3.3.10
 # Not really needed for this project, but anyway
