--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ developers=James Kleeh
 grailsVersion=3.3.10
 # Not really needed for this project, but anyway
 kafkaVersion="Unknown"
+
+apimicronaut=https://docs.micronaut.io/latest/api/io/micronaut/
