--- a/docs-examples/build.gradle
+++ b/docs-examples/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 dependencies {
+    testImplementation platform("io.micronaut:micronaut-bom:$micronautVersion")
     testImplementation project(":ratelimiter-core")
     testImplementation "io.micronaut:micronaut-http"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.50"
