--- a/docs-examples/build.gradle
+++ b/docs-examples/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id "org.jetbrains.kotlin.jvm" version "1.3.50"
 }
 
+checkstyleTest.enabled = false
+
 dependencies {
     testImplementation platform("io.micronaut:micronaut-bom:$micronautVersion")
     testImplementation project(":ratelimiter-core")
