--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -7,4 +7,4 @@ resilience4j:
   title: Resilience4j
   resilience4j-configuration: Configuration
   resilience4j-response: Error Response
-
+repository: Repository
