--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,6 @@ rootProject.name = 'micronaut-ratelimiter'
 
 include 'ratelimiter-core'
 include 'ratelimiter-resilience4j'
+include 'circuitbreaker-resilience4j'
 
 include 'docs-examples'
