--- a/circuitbreaker-core/build.gradle
+++ b/circuitbreaker-core/build.gradle
@@ -3,7 +3,6 @@ dependencies {
 
     api "io.micronaut:micronaut-inject"
     api "io.micronaut:micronaut-http-server"
-
-    testImplementation "io.micronaut:micronaut-http-client"
-    testImplementation "io.micronaut:micronaut-http-server-netty"
+    implementation "io.micronaut:micronaut-validation"
+    implementation "io.micronaut:micronaut-router"
 }
