--- a/circuitbreaker-resilience4j/build.gradle
+++ b/circuitbreaker-resilience4j/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     implementation "io.github.resilience4j:resilience4j-rxjava2:1.2.0"
     api "io.micronaut:micronaut-inject"
     api "io.micronaut:micronaut-http-server"
-    api project(":ratelimiter-core")
+    api project(":circuitbreaker-core")
 
     testImplementation "io.micronaut:micronaut-http-client"
     testImplementation "io.micronaut:micronaut-http-server-netty"
