--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,8 @@
 rootProject.name = 'micronaut-ratelimiter'
 
 include 'ratelimiter-core'
+include 'circuitbreaker-core'
+
 include 'ratelimiter-resilience4j'
 include 'circuitbreaker-resilience4j'
 
